Novas funcionalidades